tests/lean/simpArgTypeMismatch.lean.expected.out
simpArgTypeMismatch.lean:3:13-3:31: error: application type mismatch
  decideEqFalse Unit
argument
  Unit
has type
  Type : Type 1
but is expected to have type
  ¬?m : Prop
